2010-06-28  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Adam Roben.

        [WinCairo] Text box backgrounds do not render in partially opaque layers
        https://bugs.webkit.org/show_bug.cgi?id=41113

        Tests:
         manual-tests/partially-opaque-text-input.html

        * platform/graphics/win/GraphicsContextCairoWin.cpp:
        (WebCore::GraphicsContext::releaseWindowsContext):
        When restoring a context which does not support alpha blending, manually
        set the alpha channel of the HBITMAP to fully opaque. This will effectively
        ignore the alpha channel of the HBITMAP, which is necessary because GDI
        drawing functions set the alpha value to be fully transparent (0).

Canonical link: https://commits.webkit.org/52992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62012 268f45cc-cd09-0410-ab3c-d52691b4dbfc